[package]
name = "mazu"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = {version=">0.4", features = ["derive"]}
boomphf = {version="0.5.9", features = ["serde"]}
serde_json = ">=1.0"
serde =  {version = ">=1.0", features = ["derive"] }
kmers = {git = "https://github.com/thejasonfan/kmers.git", branch="main", features=["seq-vector"]}
simple-sds = {git = "https://github.com/thejasonfan/simple-sds", branch = "simpler_serde_compat"}

wyhash = "0.5.0"
bincode = ">=1.3.3"

simple_logger = "4.0.0"
log = "0.4.17"
rayon = "1.6.1"
anyhow = ">=1.0,<2.0"
thiserror = ">=1.0,<2.0"

[dev-dependencies]
